--- a/src/calendar/style.scss
+++ b/src/calendar/style.scss
@@ -65,73 +65,111 @@ $calendar-prefix: 'dk-calendar';
     }
   }
 
+  &-day {
 
-
-  &-day-picker {
-    width: $calendar-item-size * 7;
-    text-align: center;
-  }
-
-  &-day-header {
-    display: flex;
-    padding: 4px 8px;
-    align-items: center;
-  }
-
-  &-day-icon {
-    width: 14px;
-    height: 14px;
-    font-size: 14px;
-  }
-
-  &-day-select {
-    display: flex;
-    flex: 1;
-    justify-content: center;
-
-    > span {
-      display: inline-block;
-      color: $gray-800;
-      font-weight: bold;
-      padding: 0 3px;
+    &-picker {
+      width: $calendar-item-size * 7;
+      text-align: center;
     }
-  }
+
+    &-header {
+      display: flex;
+      padding: 4px 8px;
+      align-items: center;
+      // border-bottom: 1px solid $calendar-border-color;
+    }
+
+    &-prev-year,
+    &-next-year,
+    &-prev-month,
+    &-next-month {
+      cursor: pointer;
+      font-size: 14px;
+
+      &:hover {
+        color: $primary;
+      }
+    }
+
+    &-prev-month {
+      margin-left: 3px;
+    }
+
+    &-next-month {
+      margin-right: 3px;
+    }
+
+    &-select {
+      display: flex;
+      flex: 1;
+      justify-content: center;
+
+      >span {
+        display: inline-block;
+        color: $gray-800;
+        font-weight: bold;
+        padding: 0 3px;
+      }
+    }
 
 
-  &-day-week {
-    width: 100%;
-    // border-bottom: 1px solid $calendar-border-color;
+    &-week {
+      width: 100%;
 
-    > span {
+      > span {
+        display: inline-block;
+        width: $calendar-item-size;
+        height: $calendar-item-size;
+        line-height: $calendar-item-size;
+        color: $gray-800;
+        font-weight: bold;
+        font-size: 90%;
+      }
+    }
+
+    &-list {
+      position: relative;
+      z-index: 10;
+    }
+
+    &-item {
       display: inline-block;
       width: $calendar-item-size;
       height: $calendar-item-size;
-      line-height: $calendar-item-size;
-      color: $gray-800;
-      font-weight: bold;
-      font-size: 90%;
+      padding: 3px;
+
+      > span {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        height: 100%;
+        border: 1px solid transparent;
+        border-radius: 6px;
+        cursor: pointer;
+        font-size: $font-size-base;
+        color: $calendar-color;
+
+        &:hover {
+          background-color: $calendar-item-bg;
+          border-color: $calendar-border-color;
+        }
+      }
     }
-  }
 
-  &-day-list {
-    position: relative;
-    z-index: 10;
-  }
+    &-item-other {
+      > span {
+        color: $calendar-other-color;
+      }
+    }
 
-  &-day-item {
-    display: inline-block;
-    width: $calendar-item-size;
-    height: $calendar-item-size;
-    color: $calendar-color;
-    border: 1px solid transparent;
-    font-size: $font-size-base;
-    line-height: $calendar-item-size;
-    cursor: pointer;
-    border-radius: 6px;
-
-    &:hover {
-      background-color: $calendar-item-bg;
-      border-color: $calendar-border-color;
+    &-item-active {
+      > span,
+      > span:hover {
+        background-color: $calendar-active-bg;
+        border-color: $calendar-active-border-color;
+        color: #fff;
+      }
     }
   }
 }
