--- a/src/style/_reboot.scss
+++ b/src/style/_reboot.scss
@@ -51,7 +51,10 @@ hr {
 h1, h2, h3, h4, h5, h6 {
   margin-top: 0;
   margin-bottom: $headings-margin-bottom;
-  font-weight: 500;
+  font-weight: $headings-font-weight;
+  line-height: $headings-line-height;
+  font-family: $headings-font-family;
+  color: $headings-color;
 }
 
 h1 {
