--- a/src/style/theme.scss
+++ b/src/style/theme.scss
@@ -201,11 +201,13 @@ $input-hover-border-color:          $input-focus-border-color !default;
 $calendar-color:                    $input-color !default;
 $calendar-other-color:              $input-placeholder-color !default;
 $calendar-border-color:             $input-border-color !default;
-$calendar-item-size:                36px !default;
-$calendar-item-bg:                  #edf2f9 !default;
 $calendar-active-bg:                $component-active-bg !default;
 $calendar-active-border-color:      $calendar-active-bg !default;
 $calendar-icon-size:                14px !default;
+$calendar-item-size:                36px !default;
+$calendar-item-bg:                  #edf2f9 !default;
+$calendar-month-item-width:         72px !default;
+$calendar-month-item-height:        34px !default;
 $calendar-icon-color:               $input-placeholder-color !default;
 $calendar-container-padding:        12px !default;
 $calendar-shadow:                   0 2px 8px rgba($black, .25) !default;
