--- a/src/calendar/style.scss
+++ b/src/calendar/style.scss
@@ -30,6 +30,7 @@ $calendar-prefix: 'dk-calendar';
     position: absolute;
     top: 100%;
     left: 0;
+    width: $calendar-item-size * 7 + $calendar-container-padding * 2;
     margin-top: 5px;
     padding: $calendar-container-padding;
     box-shadow: $calendar-shadow;
@@ -129,7 +130,7 @@ $calendar-prefix: 'dk-calendar';
   }
 
   &-day {
-    width: $calendar-item-size * 7;
+    width: auto;
     text-align: center;
 
     &-item {
@@ -208,15 +209,30 @@ $calendar-prefix: 'dk-calendar';
     }
   }
 
+  &-time {
+    display: flex;
+    width: 100%;
+    flex-direction: column;
+
+    &-item {
+      width: 1 / 3 * 100%;
+      border-right: 1px solid $border-color;
+
+      &:last-child {
+        border-color: transparent;
+      }
+    }
+  }
+
   &-month {
-    width: $calendar-month-item-width * 3;
+    width: auto;
     text-align: center;
 
     &-item {
       display: inline-block;
-      width: $calendar-month-item-width;
+      width: 1 / 3 * 100%;
       height: $calendar-month-item-height;
-      padding: 4px 8px 0 8px;
+      padding: 6px 8px 0 8px;
 
       > span {
         display: flex;
