feat: update dashkit-ui

--- a/src/style/theme.scss
+++ b/src/style/theme.scss
@@ -206,6 +206,7 @@ $calendar-active-border-color:      $calendar-active-bg !default;
 $calendar-icon-size:                14px !default;
 $calendar-item-size:                36px !default;
 $calendar-item-bg:                  #edf2f9 !default;
+$calendar-time-item-height:         30px !default;
 $calendar-month-item-height:        36px !default;
 $calendar-icon-color:               $input-placeholder-color !default;
 $calendar-container-padding:        12px !default;
