--- a/src/calendar/style.scss
+++ b/src/calendar/style.scss
@@ -212,15 +212,29 @@ $calendar-prefix: 'dk-calendar';
   &-time {
     display: flex;
     width: 100%;
-    flex-direction: column;
+    flex-direction: row;
 
-    &-item {
+    &-scroll {
       width: 1 / 3 * 100%;
+      height: 150px;
       border-right: 1px solid $border-color;
+      flex-direction: column;
+      overflow: hidden;
 
       &:last-child {
-        border-color: transparent;
+        border-right: 0;
       }
+    }
+
+    &-pad {
+      height: $calendar-time-item-height * 2;
+    }
+
+    &-item {
+      display: block;
+      text-align: center;
+      font-size: 12px;
+      line-height: $calendar-time-item-height;
     }
   }
 
