--- a/src/style/theme.scss
+++ b/src/style/theme.scss
@@ -175,6 +175,10 @@ $btn-disabled-opacity:              .65 !default;
 $btn-link-disabled-color:           $gray-600 !default;
 $btn-transition:                    color .15s $ease-in-out, background-color .15s $ease-in-out, border-color .15s $ease-in-out, box-shadow .15s $ease-in-out !default;
 
+// Scrollbar
+//
+$scrollbar-thumb-size:              6px !default;
+
 // Input
 //
 $input-height:                      34px !default;
