--- a/src/calendar/style.scss
+++ b/src/calendar/style.scss
@@ -64,8 +64,8 @@ $calendar-prefix: 'dk-calendar';
     }
   }
 
-  &-prev-year,
-  &-next-year,
+  &-prev,
+  &-next,
   &-prev-month,
   &-next-month {
     cursor: pointer;
@@ -88,12 +88,17 @@ $calendar-prefix: 'dk-calendar';
     display: flex;
     flex: 1;
     justify-content: center;
+    cursor: pointer;
 
     > span {
       display: inline-block;
       color: $gray-800;
       font-weight: bold;
       padding: 0 3px;
+
+      &:hover {
+        color: $primary;
+      }
     }
   }
 
@@ -270,9 +275,9 @@ $calendar-prefix: 'dk-calendar';
     }
   }
 
-  &-month {
-    width: auto;
-    text-align: center;
+  &-month,
+  &-year {
+    width: 100%;
 
     &-item {
       display: inline-block;
