feat: calendar style

--- a/src/scrollbar/style.scss
+++ b/src/scrollbar/style.scss
@@ -62,9 +62,11 @@ $scrollbar-prefix: 'dk-scrollbar';
 
   &-thumb-vertical {
     width: 100%;
+    height: 0;
   }
 
   &-thumb-horizontal {
+    width: 0;
     height: 100%;
   }
 }
