--- a/src/calendar/style.scss
+++ b/src/calendar/style.scss
@@ -8,6 +8,7 @@ $calendar-prefix: 'dk-calendar';
   position: relative;
   display: inline-block;
   width: 220px;
+  color: $gray-800;
 
   &-input {
     padding-right: 30px;
@@ -72,7 +73,7 @@ $calendar-prefix: 'dk-calendar';
     font-size: 14px;
 
     &:hover {
-      color: $primary;
+      color: $calendar-active-bg;
     }
   }
 
@@ -92,12 +93,11 @@ $calendar-prefix: 'dk-calendar';
 
     > span {
       display: inline-block;
-      color: $gray-800;
       font-weight: bold;
       padding: 0 3px;
 
       &:hover {
-        color: $primary;
+        color: $calendar-active-bg;
       }
     }
   }
@@ -110,7 +110,6 @@ $calendar-prefix: 'dk-calendar';
       width: $calendar-item-size;
       height: $calendar-item-size;
       line-height: $calendar-item-size;
-      color: $gray-800;
       font-weight: bold;
       font-size: 90%;
     }
@@ -216,7 +215,8 @@ $calendar-prefix: 'dk-calendar';
 
   &-time {
     display: flex;
-    width: 100%;
+    width: $calendar-time-item-width * 3;
+    height: $calendar-time-item-height * 6;
     flex-direction: row;
 
     // &:before {
@@ -233,7 +233,7 @@ $calendar-prefix: 'dk-calendar';
 
     &-scroll {
       width: $calendar-time-item-width;
-      height: $calendar-time-item-height * 6;
+      height: 100%;
       border-right: 1px solid $border-color;
       flex-direction: column;
       overflow: hidden;
@@ -275,22 +275,21 @@ $calendar-prefix: 'dk-calendar';
     }
   }
 
-  &-month,
-  &-year {
+  &-ym {
     width: 100%;
 
     &-item {
       display: inline-block;
       width: 1 / 3 * 100%;
-      height: $calendar-month-item-height;
-      padding: 6px 8px 0 8px;
+      margin-top: 12px;
+      padding: 0 8px;
 
       > span {
         display: flex;
         justify-content: center;
         align-items: center;
         width: 100%;
-        height: 100%;
+        height: $calendar-ym-item-height;
         border-radius: 3px;
         cursor: pointer;
         color: $calendar-color;
