--- a/src/style/theme.scss
+++ b/src/style/theme.scss
@@ -212,7 +212,7 @@ $calendar-item-size:                36px !default;
 $calendar-item-bg:                  #edf2f9 !default;
 $calendar-time-item-width:          66px !default;
 $calendar-time-item-height:         32px !default;
-$calendar-month-item-height:        36px !default;
+$calendar-ym-item-height:           32px !default;
 $calendar-icon-color:               $input-placeholder-color !default;
 $calendar-container-padding:        12px !default;
 $calendar-shadow:                   0 2px 8px rgba($black, .25) !default;
