feat: range-picker

--- a/src/calendar/style.scss
+++ b/src/calendar/style.scss
@@ -152,7 +152,7 @@ $calendar-prefix: 'dk-calendar';
         width: 100%;
         height: 100%;
         border: 1px solid transparent;
-        border-radius: 6px;
+        border-radius: 50%;
         cursor: pointer;
         color: $calendar-color;
 
@@ -207,8 +207,9 @@ $calendar-prefix: 'dk-calendar';
 
         > span,
         > span:hover {
-          border-color: $calendar-active-border-color;
+          background: $calendar-active-border-color;
           border-radius: 50%;
+          color: #fff;
         }
       }
     }
@@ -313,6 +314,15 @@ $calendar-prefix: 'dk-calendar';
         background: $calendar-active-bg;
         color: #fff;
       }
+    }
+  }
+
+  &-range {
+    display: flex;
+    flex-direction: row;
+
+    > div:first-child {
+      margin-right: 18px;
     }
   }
 }
