--- a/src/calendar/style.scss
+++ b/src/calendar/style.scss
@@ -7,11 +7,48 @@ $calendar-prefix: 'dk-calendar';
 .#{$calendar-prefix} {
   position: relative;
   display: inline-block;
-  width: 220px;
   color: $gray-800;
 
-  &-input {
+  &-inner {
+    min-width: $calendar-width;
+    padding: $input-padding-y $input-padding-x;
     padding-right: 30px;
+    border: 1px solid $input-border-color;
+    border-radius: $border-radius;
+    transition: $input-transition;
+
+    &:hover {
+      border-color: $input-hover-border-color;
+    }
+
+    > span {
+      padding: 0 $input-padding-x / 2;
+    }
+  }
+
+  &-input {
+    border: none;
+    outline: 0;
+    font-size: $font-size-base;
+    color: $input-color;
+
+    &-range {
+      text-align: center;
+    }
+
+    &::placeholder {
+      color: $input-placeholder-color;
+      opacity: 1;
+    }
+  }
+
+  &-range-input {
+    min-width: 350px;
+    direction: flex;
+
+    &-text {
+      flex: 1;
+    }
   }
 
   &-icon {
@@ -157,7 +194,7 @@ $calendar-prefix: 'dk-calendar';
         color: $calendar-color;
 
         &:hover {
-          background-color: $calendar-item-bg;
+          background: $calendar-item-bg;
           border-color: $calendar-border-color;
         }
       }
@@ -199,7 +236,7 @@ $calendar-prefix: 'dk-calendar';
       }
     }
 
-    &-item-week-active {
+    &-item-hover-active {
       background: $calendar-item-bg;
 
       &.#{$calendar-prefix}-day-item-hover-start,
@@ -216,22 +253,12 @@ $calendar-prefix: 'dk-calendar';
   }
 
   &-time {
-    display: flex;
-    width: $calendar-time-item-width * 3;
-    height: $calendar-time-item-height * 6;
-    flex-direction: row;
+    width: auto;
 
-    // &:before {
-    //   content: '';
-    //   position: absolute;
-    //   top: 50%;
-    //   left: $calendar-container-padding;
-    //   right: $calendar-container-padding;
-    //   margin-top: - $calendar-time-item-height / 2;
-    //   height: $calendar-time-item-height;
-    //   border-top: 1px solid $border-color;
-    //   border-bottom: 1px solid $border-color;
-    // }
+    &-container {
+      display: flex;
+      flex-direction: row;
+    }
 
     &-scroll {
       width: $calendar-time-item-width;
@@ -274,6 +301,29 @@ $calendar-prefix: 'dk-calendar';
           background: $calendar-item-bg;
         }
       }
+    }
+
+    &-footer {
+      width: 100%;
+      height: 36px;
+      align-items: center;
+      display: flex;
+      flex-direction: row;
+      border-top: 1px solid var(--calendar-border-color);
+      justify-content: flex-end;
+
+      >div {
+        line-height: 28px;
+        padding: 0 5px;
+        cursor: pointer;
+        font-size: 12px;
+      }
+    }
+
+    &-confirm {
+      margin: 0 5px;
+      color: $calendar-active-color;
+      font-weight: bold;
     }
   }
 
