--- a/src/style/theme.scss
+++ b/src/style/theme.scss
@@ -202,14 +202,15 @@ $input-hover-border-color:          $input-focus-border-color !default;
 
 // Calendar
 //
+$calendar-width:                    220px !default;
 $calendar-color:                    $input-color !default;
+$calendar-item-bg:                  #edf2f9 !default;
 $calendar-other-color:              $input-placeholder-color !default;
 $calendar-border-color:             $input-border-color !default;
 $calendar-active-bg:                $component-active-bg !default;
 $calendar-active-border-color:      $calendar-active-bg !default;
 $calendar-icon-size:                14px !default;
 $calendar-item-size:                36px !default;
-$calendar-item-bg:                  #edf2f9 !default;
 $calendar-time-item-width:          66px !default;
 $calendar-time-item-height:         32px !default;
 $calendar-ym-item-height:           32px !default;
