feat: range-picker

--- a/src/calendar/style.scss
+++ b/src/calendar/style.scss
@@ -322,7 +322,7 @@ $calendar-prefix: 'dk-calendar';
 
     &-confirm {
       margin: 0 5px;
-      color: $calendar-active-color;
+      color: $primary;
       font-weight: bold;
     }
   }
