--- a/src/style/theme.scss
+++ b/src/style/theme.scss
@@ -162,9 +162,9 @@ $btn-type-colors: map-merge(
   $btn-type-colors
 );
 
-$btn-height:                        34px !default;
-$btn-height-lg:                     42px !default;
-$btn-height-sm:                     26px !default;
+$btn-size:                          34px !default;
+$btn-size-lg:                       42px !default;
+$btn-size-sm:                       26px !default;
 $btn-padding-x:                     12px !default;
 $btn-padding-x-lg:                  16px !default;
 $btn-padding-x-sm:                  8px !default;
