--- a/src/style/mixins/_buttons.scss
+++ b/src/style/mixins/_buttons.scss
@@ -6,26 +6,32 @@
 @mixin button-variant($color) {
   $background: $color;
   $border: $color;
-  $hover-background: darken($background, 7.5%);
-  $hover-border: darken($border, 10%);
-  $active-background: darken($background, 10%);
-  $active-border: darken($border, 12.5%);
+  $hover-background: mix($white, $background, 12.5%);
+  $hover-border: mix($white, $border, 12.5%);
+  $active-background: mix($black, $background, 10%);
+  $active-border: mix($black, $border, 12.5%);
 
   color: $white;
   border-color: $border;
-  // background: $background;
-  @include gradient-bg($background);
+  background-color: $background;
+  // @include gradient-bg($background);
 
-  @include hover {
+  &:focus,
+  &:hover {
     color: color-yiq($hover-background);
-    @include gradient-bg($hover-background);
+    background-color: $hover-background;
+    // @include gradient-bg($hover-background);
     border-color: $hover-border;
   }
 
-  &:focus,
-  &.focus {
-    box-shadow: 0 0 0 $btn-focus-width rgba($border, .5);
+  &:active {
+    background-color: $active-background;
+    border-color: $active-border;
   }
+
+  // &:focus {
+  //   box-shadow: 0 0 0 $btn-focus-width rgba($border, .5);
+  // }
 
   &.disabled,
   &:disabled {
@@ -35,22 +41,36 @@
   }
 }
 
-@mixin button-outline-variant($color, $color-hover: color-yiq($color), $active-background: $color, $active-border: $color) {
+@mixin button-outline-variant($color) {
+  $background: $color;
+  $border: $color;
+  $color-hover: color-yiq($color);
+  $hover-background: $color;
+  $hover-border: $color;
+  $active-background: mix($black, $background, 10%);
+  $active-border: mix($black, $border, 12.5%);
+
   color: $color;
   background-color: transparent;
   background-image: none;
-  border-color: $color;
+  border-color: $border;
 
+  &:focus,
   &:hover {
+    background-color: $hover-background;
+    // @include gradient-bg($hover-background);
     color: $color-hover;
-    background-color: $active-background;
+    border-color: $hover-border;
+  }
+
+  &:active {
+    @include gradient-bg($active-background);
     border-color: $active-border;
   }
 
-  &:focus,
-  &.focus {
-    box-shadow: 0 0 0 $btn-focus-width rgba($color, .5);
-  }
+  // &:focus {
+  //   box-shadow: 0 0 0 $btn-focus-width rgba($color, .5);
+  // }
 
   &.disabled,
   &:disabled {
