--- a/src/style/mixins/_text.scss
+++ b/src/style/mixins/_text.scss
@@ -14,7 +14,8 @@
   }
 
   a#{$parent} {
-    @include hover-focus {
+    &:hover,
+    &:focus {
       color: darken($color, 10%) !important;
     }
   }
